Engine and ExampleParticleGravity are now buildebale on Linux (gcc)

--- a/.gitignore
+++ b/.gitignore
@@ -224,6 +224,7 @@ FakesAssemblies/
 *.opt
 
 *.o
+ExampleParticleGravity/EPG.exec
 
 # Visual Studio LightSwitch build output
 **/*.HTMLClient/GeneratedArtifacts
