--- a/BrotBoxEngineTest/BrotBoxEngineTest.vcxproj
+++ b/BrotBoxEngineTest/BrotBoxEngineTest.vcxproj
@@ -150,8 +150,8 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ImageTest.h" />
-    <ClInclude Include="LinearCongruentialGeneratorTest.h" />
+    <ClInclude Include="Tests\ImageTest.h" />
+    <ClInclude Include="Tests\LinearCongruentialGeneratorTest.h" />
     <ClInclude Include="Tests\MathTest.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -169,7 +169,7 @@
     <ClInclude Include="Tests\StringTest.h" />
     <ClInclude Include="Tests\UniquePointerTest.h" />
     <ClInclude Include="Tests\Vector2Test.h" />
-    <ClInclude Include="Vector3Test.h" />
+    <ClInclude Include="Tests\Vector3Test.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BrotBoxEngineTest.cpp" />
