Test.exec is now ignored by git and removed by makefile

--- a/.gitignore
+++ b/.gitignore
@@ -225,6 +225,8 @@ FakesAssemblies/
 
 *.o
 ExampleParticleGravity/EPG.exec
+BrotBoxEngineTest/Test.exec
+
 
 # Visual Studio LightSwitch build output
 **/*.HTMLClient/GeneratedArtifacts
