Added exec files to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -226,6 +226,8 @@ FakesAssemblies/
 *.o
 ExampleParticleGravity/EPG.exec
 BrotBoxEngineTest/Test.exec
+Example3D/E3D.exec
+ExampleSnake/Snake.exec
 
 
 # Visual Studio LightSwitch build output
