Added Test Project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ target_link_libraries(BrotboxEngine glfw ${GLFW_LIBRARIES})
 target_include_directories(BrotboxEngine PUBLIC "Third-Party/Vulkan/Include")
 target_include_directories(BrotboxEngine PUBLIC "Third-Party/stb")
 
+add_subdirectory(BrotBoxEngineTest)
 add_subdirectory(Example3D)
 add_subdirectory(ExampleMandelbrot)
 add_subdirectory(ExampleParticleGravity)
