Explicitly stating the targets to build so that we avoid building targets of dependencies.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ script:
   - mkdir cmakebuild
   - cd cmakebuild
   - cmake ..
-  - cmake --build .
+  - cmake --build . --target Example3D ExampleMandelbrot ExampleParticleGravity ExampleSnake
