--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_subdirectory(Example3D)
 add_subdirectory(ExampleMandelbrot)
 add_subdirectory(ExampleParticleGravity)
 add_subdirectory(ExampleSnake)
+add_subdirectory(ExampleCurves)
 
 
 
