Added very, very premature text rendering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,6 @@ add_subdirectory(ExampleMandelbrot)
 add_subdirectory(ExampleParticleGravity)
 add_subdirectory(ExampleSnake)
 add_subdirectory(ExampleCurves)
-
+add_subdirectory(ExampleTextRendering)
 
 
