It is now possible to use custom fragment shaders for rectangle drawing. Added a new Example (ExampleMandelbrotShader) that utilizes this feature.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ target_include_directories(BrotboxEngine PUBLIC "Third-Party/stb")
 add_subdirectory(BrotBoxEngineTest)
 add_subdirectory(Example3D)
 add_subdirectory(ExampleMandelbrot)
+add_subdirectory(ExampleMandelbrotShader)
 add_subdirectory(ExampleParticleGravity)
 add_subdirectory(ExampleSnake)
 add_subdirectory(ExampleCurves)
