--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ target_include_directories(BrotboxEngine PUBLIC "Third-Party/Vulkan/Include")
 target_include_directories(BrotboxEngine PUBLIC "Third-Party/stb")
 
 add_subdirectory(BrotBoxEngineTest)
+add_subdirectory(BrotBoxEngineGTest)
 add_subdirectory(Example3D)
 add_subdirectory(ExampleMandelbrot)
 add_subdirectory(ExampleMandelbrotShader)
