Requiring C++17 for BBE.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@ macro(add_trivial_project name)
 endmacro()
 
 add_library(BrotboxEngine STATIC)
+set_property(TARGET BrotboxEngine PROPERTY CXX_STANDARD 17)
+set_property(TARGET BrotboxEngine PROPERTY CXX_STANDARD_REQUIRED ON)
 
 find_package(Vulkan REQUIRED)
 target_include_directories(BrotboxEngine PUBLIC Vulkan::Vulkan)
