Added new example project: ExampleBalloonGame

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,5 +46,6 @@ add_subdirectory(ExampleParticleGravity)
 add_subdirectory(ExampleSnake)
 add_subdirectory(ExampleCurves)
 add_subdirectory(ExampleTextRendering)
+add_subdirectory(ExampleBalloonGame)
 
 
