Fixed a test (path was wrong, file was not yet added to CMake)

--- a/BrotBoxEngineTest/CMakeLists.txt
+++ b/BrotBoxEngineTest/CMakeLists.txt
@@ -1,1 +1,4 @@
+file(GLOB compiled_shaders_local CONFIGURE_DEPENDS "*.png")
+list(APPEND compiled_shaders ${compiled_shaders_local})
+
 add_trivial_project(BrotBoxEngineTest)
