--- a/BrotBoxEngineGTest/CMakeLists.txt
+++ b/BrotBoxEngineGTest/CMakeLists.txt
@@ -4,3 +4,4 @@ add_executable(BrotBoxEngineGTest)
 target_link_libraries(BrotBoxEngineGTest PRIVATE gtest gtest_main BrotboxEngine)
 file(GLOB local_src CONFIGURE_DEPENDS "*.cpp")
 target_sources(BrotBoxEngineGTest PUBLIC "${local_src}")
+target_include_directories(BrotBoxEngineGTest PUBLIC .)
