Adding flags that can later be used by lcov

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,28 +30,31 @@ set_property(TARGET BrotboxEngine PROPERTY CXX_STANDARD_REQUIRED ON)
 set_property(TARGET BrotboxEngine PROPERTY CXX_EXTENSIONS OFF)
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  message(STATUS "Adding sanitizers")
-  
-  macro(add_sanitizer_flag flag)
-    target_compile_options(BrotboxEngine PUBLIC "-fsanitize=${flag}")
-    target_link_libraries(BrotboxEngine "-fsanitize=${flag}")
+  macro(add_cxx_linker_flag flag)
+    target_compile_options(BrotboxEngine PUBLIC "${flag}")
+    target_link_libraries(BrotboxEngine "${flag}")
   endmacro()
   
-  add_sanitizer_flag("address")
-  add_sanitizer_flag("pointer-compare")
-  add_sanitizer_flag("pointer-subtract")
-  add_sanitizer_flag("undefined")
-  add_sanitizer_flag("integer-divide-by-zero")
-  add_sanitizer_flag("unreachable")
-  add_sanitizer_flag("vla-bound")
-  add_sanitizer_flag("null")
-  add_sanitizer_flag("return")
-  add_sanitizer_flag("signed-integer-overflow")
-  add_sanitizer_flag("bounds-strict")
-  add_sanitizer_flag("enum")
-  add_sanitizer_flag("bool")
-  add_sanitizer_flag("vptr")
-  add_sanitizer_flag("pointer-overflow")
+  message(STATUS "Adding sanitizers")
+  add_cxx_linker_flag("-fsanitize=address")
+  add_cxx_linker_flag("-fsanitize=pointer-compare")
+  add_cxx_linker_flag("-fsanitize=pointer-subtract")
+  add_cxx_linker_flag("-fsanitize=undefined")
+  add_cxx_linker_flag("-fsanitize=integer-divide-by-zero")
+  add_cxx_linker_flag("-fsanitize=unreachable")
+  add_cxx_linker_flag("-fsanitize=vla-bound")
+  add_cxx_linker_flag("-fsanitize=null")
+  add_cxx_linker_flag("-fsanitize=return")
+  add_cxx_linker_flag("-fsanitize=signed-integer-overflow")
+  add_cxx_linker_flag("-fsanitize=bounds-strict")
+  add_cxx_linker_flag("-fsanitize=enum")
+  add_cxx_linker_flag("-fsanitize=bool")
+  add_cxx_linker_flag("-fsanitize=vptr")
+  add_cxx_linker_flag("-fsanitize=pointer-overflow")
+  
+  message(STATUS "Adding lcov flags")
+  add_cxx_linker_flag("-fprofile-arcs")
+  add_cxx_linker_flag("-ftest-coverage")
 endif()
 
 find_package(Vulkan REQUIRED)
