--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,9 @@ script:
   - cmake --build . --target ExampleCurves
   - cmake --build . --target ExampleBalloonGame
   - cmake --build . --target BrotBoxEngineGTest
+  - cmake --build . --target BrotBoxEngineTest
   - cd BrotBoxEngineGTest
   - ./BrotBoxEngineGTest
+  - cd ..
+  - cd BrotBoxEngineTest
+  - ./BrotBoxEngineTest
