--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.12.4 FATAL_ERROR)
 
+add_compile_definitions(BBE_ENGINE_ASSET_PATH="${CMAKE_CURRENT_SOURCE_DIR}/BrotBoxEngine")
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
