Fixed spelling inconsistencies

--- a/BrotBoxEngine/CMakeLists.txt
+++ b/BrotBoxEngine/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_subdirectory(BBE)
 
 file(GLOB local_src CONFIGURE_DEPENDS "*.cpp")
-target_sources(BrotboxEngine PRIVATE "${local_src}")
+target_sources(BrotBoxEngine PRIVATE "${local_src}")
 
-target_include_directories(BrotboxEngine PUBLIC .)
+target_include_directories(BrotBoxEngine PUBLIC .)
