--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 
-project(BrotboxEngine CXX)
+project(BrotBoxEngine CXX)
 
 macro(install_compiled_shaders currProject)
   foreach(shader_path ${compiled_shaders})
@@ -20,22 +20,22 @@ endmacro()
 macro(add_trivial_project name)
   add_compile_definitions(BBE_APPLICATION_ASSET_PATH="${CMAKE_CURRENT_SOURCE_DIR}")
   add_executable(${name})
-  target_link_libraries(${name} BrotboxEngine)
+  target_link_libraries(${name} BrotBoxEngine)
   file(GLOB local_src CONFIGURE_DEPENDS "*.cpp")
   target_sources(${name} PUBLIC "${local_src}")
   install_compiled_shaders(${name})
   target_include_directories(${name} PUBLIC .)
 endmacro()
 
-add_library(BrotboxEngine STATIC)
-set_property(TARGET BrotboxEngine PROPERTY CXX_STANDARD 17)
-set_property(TARGET BrotboxEngine PROPERTY CXX_STANDARD_REQUIRED ON)
-set_property(TARGET BrotboxEngine PROPERTY CXX_EXTENSIONS OFF)
+add_library(BrotBoxEngine STATIC)
+set_property(TARGET BrotBoxEngine PROPERTY CXX_STANDARD 17)
+set_property(TARGET BrotBoxEngine PROPERTY CXX_STANDARD_REQUIRED ON)
+set_property(TARGET BrotBoxEngine PROPERTY CXX_EXTENSIONS OFF)
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
   macro(add_cxx_linker_flag flag)
-    target_compile_options(BrotboxEngine PUBLIC "${flag}")
-    target_link_libraries(BrotboxEngine "${flag}")
+    target_compile_options(BrotBoxEngine PUBLIC "${flag}")
+    target_link_libraries(BrotBoxEngine "${flag}")
   endmacro()
   
   message(STATUS "Adding sanitizers")
@@ -61,15 +61,15 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
 endif()
 
 find_package(Vulkan REQUIRED)
-target_include_directories(BrotboxEngine PUBLIC Vulkan::Vulkan)
-target_link_libraries(BrotboxEngine Vulkan::Vulkan)
+target_include_directories(BrotBoxEngine PUBLIC Vulkan::Vulkan)
+target_link_libraries(BrotBoxEngine Vulkan::Vulkan)
 
 add_subdirectory(BrotBoxEngine)
 add_subdirectory(Third-Party/glfw-3.3.2)
 include_directories(Third-Party/glfw-3.3.2/include)
-target_link_libraries(BrotboxEngine glfw ${GLFW_LIBRARIES})
+target_link_libraries(BrotBoxEngine glfw ${GLFW_LIBRARIES})
 
-target_include_directories(BrotboxEngine PUBLIC "Third-Party/stb")
+target_include_directories(BrotBoxEngine PUBLIC "Third-Party/stb")
 
 add_subdirectory(BrotBoxEngineTest)
 add_subdirectory(BrotBoxEngineGTest)
