--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,7 @@ add_subdirectory(ExampleMandelbrot)
 add_subdirectory(ExampleMandelbrotShader)
 add_subdirectory(ExampleParticleGravity)
 add_subdirectory(ExampleSnake)
+add_subdirectory(ExampleSnake3D)
 add_subdirectory(ExampleCurves)
 add_subdirectory(ExampleTextRendering)
 add_subdirectory(ExampleBalloonGame)
