Added physics example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,5 +84,6 @@ add_subdirectory(ExampleCurves)
 add_subdirectory(ExampleTextRendering)
 add_subdirectory(ExampleBalloonGame)
 add_subdirectory(ExampleSignedDistanceField)
+add_subdirectory(Example2DPhysics)
 
 
