Added ExampleStreamCountdown An example where you can specify a countdown and see it tick down. Happy animation at the end! :-)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,5 +85,6 @@ add_subdirectory(ExampleTextRendering)
 add_subdirectory(ExampleBalloonGame)
 add_subdirectory(ExampleSignedDistanceField)
 add_subdirectory(Example2DPhysics)
+add_subdirectory(ExampleStreamCountdown)
 
 
