--- a/BrotBoxEngineGTest/CMakeLists.txt
+++ b/BrotBoxEngineGTest/CMakeLists.txt
@@ -5,3 +5,4 @@ target_link_libraries(BrotBoxEngineGTest PRIVATE gtest gtest_main BrotBoxEngine)
 file(GLOB local_src CONFIGURE_DEPENDS "*.cpp")
 target_sources(BrotBoxEngineGTest PUBLIC "${local_src}")
 target_include_directories(BrotBoxEngineGTest PUBLIC .)
+set_target_properties(gtest gtest_main PROPERTIES FOLDER gtest)
