--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,13 @@ script:
   - cmake --build . --target ExampleSnake
   - cmake --build . --target ExampleSnake3D
   - cmake --build . --target ExampleCurves
+  - cmake --build . --target ExampleTextRendering
   - cmake --build . --target ExampleBalloonGame
+  - cmake --build . --target ExampleSignedDistanceField
+  - cmake --build . --target Example2DPhysics
+  - cmake --build . --target Example2DPhysicsBox2D
+  - cmake --build . --target ExampleStreamCountdown
+  - cmake --build . --target ExampleTemplate
   - cmake --build . --target BrotBoxEngineGTest
   - cmake --build . --target BrotBoxEngineTest
   - cd BrotBoxEngineGTest
