--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,7 +91,7 @@ add_subdirectory(ExampleCurves)
 add_subdirectory(ExampleTextRendering)
 add_subdirectory(ExampleBalloonGame)
 add_subdirectory(ExampleSignedDistanceField)
-add_subdirectory(Example2DPhysics)
+add_subdirectory(Example2DPhysicsBallPit)
 add_subdirectory(Example2DPhysicsBox2D)
 add_subdirectory(ExampleStreamCountdown)
 add_subdirectory(ExampleTemplate)
