--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ script:
   - cmake --build . --target ExampleBalloonGame
   - cmake --build . --target ExampleSignedDistanceField
   - cmake --build . --target Example2DPhysicsBallPit
-  - cmake --build . --target Example2DPhysicsBox2D
+  - cmake --build . --target Example2DPhysicsChainReaction
   - cmake --build . --target ExampleStreamCountdown
   - cmake --build . --target ExampleTemplate
   - cmake --build . --target BrotBoxEngineGTest
