--- a/.travis.yml
+++ b/.travis.yml
@@ -39,3 +39,6 @@ script:
   - cmake --build . --target BrotBoxEngineTest
   - cd BrotBoxEngineGTest
   - ./BrotBoxEngineGTest
+  - cd ..
+  - cd BrotBoxEngineTest
+  - ./BrotBoxEngineTest
